# Contest_Practice

./: README.md  main.py  pyproject.toml
dacon_hansole/: 0.26.0  main.ipynb  pyproject.toml  sub.ipynb
dacon_hansole/data/result/: pred_embeddings.csv  test_results.csv
이론/: RAG.md
