[project]
name = "rag-study"
version = "0.1.0"
description = ""
authors = [
    {name = "mini9155",email = "hanbv@naver.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain-ollama (>=0.2.3,<0.3.0)",
    "langchain-community (>=0.3.18,<0.4.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "faiss-cpu (>=1.10.0,<2.0.0)",
    "kiwipiepy (>=0.20.3,<0.21.0)",
    "pypdf (>=5.3.0,<6.0.0)"
]

[tool.poetry]
packages = [{include = "rag_study", from = "src"}]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
