[tool.poetry]
name = "dacon-hansole"
version = "0.1.0"
description = ""
authors = ["min <hanbv@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
langchain = "^0.3.19"
transformers = "^4.49.0"
torch = "^2.6.0"
langchain-community = "^0.3.18"
bitsandbytes = "^0.45.3"
accelerate = "0.26.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
